Date is changed

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <footer>
         <div class="siteFooterBar">
             <div class="content1">
-                <div class="foot">2021 © All rights reserved.</div>
+                <div class="foot"><span id="DateID" class="DateClass">2021</span> © All rights reserved.</div>
             </div>
         </div>
         <div class="footer-content">
@@ -312,6 +312,7 @@
 
     <!--js for scroll effects-->
     <script src="scroll.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
