--- a/donate.html
+++ b/donate.html
@@ -33,10 +33,11 @@
             <ul class="des">
                 <li class="steps"><span>1</span> Register🧍🏻</li>
                 <li class="steps"><span>2</span> Post a Blood request🩸 </li>
+                <li class="steps"><span>4</span> About Your request🩸 </li>
                 <li class="steps"><span>3</span> Respond ✅ </li>
-                <li class="steps"><span>4</span> Get notified 📱</li>
-                <li class="steps"><span>5</span> Forever Free 💲❌ </li>
-                <li class="steps"><span>6</span> Save a Life 🩸🧬</li>
+                <!-- <li class="steps"><span>4</span> Get notified 📱</li> -->
+                <!-- <li class="steps"><span>5</span> Forever Free 💲❌ </li> -->
+                <!-- <li class="steps"><span>6</span> Save a Life 🩸🧬</li> -->
             </ul>
 
             <div class="text-box">
@@ -52,7 +53,7 @@
     <footer>
         <div class="siteFooterBar">
             <div class="content1">
-                <div class="foot">2021 © All rights reserved.</div>
+                <div class="foot">2023 © All rights reserved.</div>
             </div>
         </div>
         <div class="footer-content">
