--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li><a class="scroll" href="#vol-sect">Volunteer</a></li>
                     <li><a href="donate.html" target="_blank">Donate</a></li>
                     <li><a href="help.html" target="_blank">Get Help</a></li>
+                    <li><a href="developer.html" target="_blank">About Developer</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -125,36 +126,36 @@
         <ul class="volunt">
             <li class="vol">
                 <span class=" vol-i number">1 </span>
-                <span class=" vol-i name">Garvit</span>
+                <span class=" vol-i name">Manan Aggarwal</span>
                 <span class=" vol-i location">Delhi,<br>India</span>
                 <span class=" vol-i blood group">O+<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
             </li>
             <li class="vol">
                 <span class=" vol-i number">2</span>
-                <span class=" vol-i name">Mehere kaur</span>
+                <span class=" vol-i name">Arpit Aggarwal</span>
                 <span class=" vol-i location">Ghaziabad,<br>Uttar Pradesh</span>
                 <span class=" vol-i blood group">B+<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
             </li>
             <li class="vol">
                 <span class=" vol-i number">3</span>
-                <span class=" vol-i name">Kenny</span>
+                <span class=" vol-i name">Harsh Nainwaya</span>
                 <span class=" vol-i location">Kerela,<br>India</span>
                 <span class=" vol-i blood group">AB+<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
             </li>
             <li class="vol">
                 <span class=" vol-i number">4</span>
-                <span class=" vol-i name">Sarah</span>
+                <span class=" vol-i name">Manav Sharma</span>
                 <span class=" vol-i location">Tamil Nadu,<br>India</span>
                 <span class=" vol-i blood group">A+<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
             </li>
 
-            <li class="vol">
+            <!-- <li class="vol">
                 <span class=" vol-i number">5</span>
-                <span class=" vol-i name">Kenneth</span>
+                <span class=" vol-i name">Nitin</span>
                 <span class=" vol-i location">Ayodhya,<br>Uttar Pradesh</span>
                 <span class=" vol-i blood group"> O+<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
@@ -162,7 +163,7 @@
 
             <li class="vol">
                 <span class=" vol-i number">6</span>
-                <span class=" vol-i name">Ritika</span>
+                <span class=" vol-i name">Shreya</span>
                 <span class=" vol-i location">Ramnagar,<br>Uttarakhand</span>
                 <span class=" vol-i blood group">O+<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
@@ -170,7 +171,7 @@
 
             <li class="vol">
                 <span class=" vol-i number">7</span>
-                <span class=" vol-i name">Krish Maurya</span>
+                <span class=" vol-i name">Krish</span>
                 <span class=" vol-i location">Surat,<br>Gujarat</span>
                 <span class=" vol-i blood group">O- <i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
@@ -178,7 +179,7 @@
 
             <li class="vol">
                 <span class=" vol-i number">8</span>
-                <span class=" vol-i name">Tushkar</span>
+                <span class=" vol-i name">Sanjana</span>
                 <span class=" vol-i location">Bengaluru,<br>Karnataka</span>
                 <span class=" vol-i blood group">AB+<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
@@ -186,7 +187,7 @@
 
             <li class="vol">
                 <span class=" vol-i number">9</span>
-                <span class=" vol-i name">Nitin</span>
+                <span class=" vol-i name">Devansh</span>
                 <span class=" vol-i location">Lucknow</span>
                 <span class=" vol-i blood group">AB-<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
@@ -198,7 +199,7 @@
                 <span class=" vol-i location">Delhi,<br>India</span>
                 <span class=" vol-i blood group">B+<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
-            </li>
+            </li> -->
 
         </ul>
     </div>
@@ -250,7 +251,7 @@
     <footer>
         <div class="siteFooterBar">
             <div class="content1">
-                <div class="foot"><span id="DateID" class="DateClass">2021</span> © All rights reserved.</div>
+                <div class="foot"><span id="DateID" class="DateClass">2023</span> © All rights reserved.</div>
             </div>
         </div>
         <div class="footer-content">
@@ -264,12 +265,12 @@
                 save lives.</p>
             <div class="socials">
                 <ul class="sci">
-                    <li><a href="https://www.facebook.com/givebloodnhs/" target="_blank"><i
+                    <li><a href="/" target="_blank"><i
                                 class="fab fa-facebook"></i></a>
                     </li>
-                    <li><a href="https://www.instagram.com/indiablooddonation/?hl=en" target="_blank"><i
+                    <li><a href="/" target="_blank"><i
                                 class="fab fa-instagram"></i></a></li>
-                    <li><a href="http://nbtc.naco.gov.in/" target="_blank"><i class="fas fa-globe"></i></a>
+                    <li><a href="/" target="_blank"><i class="fas fa-globe"></i></a>
                     </li>
                 </ul>
             </div>
